--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
 
         <div id="menu-bar" class="fas fa-bars"></div>
 
-        <a href="#" class="logo"><span>M</span>akula</a>
+         <a href="#" class="logo"><span>M</span>akula Native Adventures</a>
 
         <nav class="navbar">
             <a href="index.html">home</a>
@@ -45,6 +45,7 @@
             <!-- <a href="#" class="btn">discover more</a> -->
         </div>
 
+        <!--
         <div class="controls">
             <span class="vid-btn active" data-src="images/vid-1.mp4"></span>
             <span class="vid-btn" data-src="images/vid-2.mp4"></span>
@@ -52,6 +53,7 @@
             <span class="vid-btn" data-src="images/vid-4.mp4"></span>
             <span class="vid-btn" data-src="images/vid-5.mp4"></span>
         </div>
+        -->
 
         <div class="video-container">
             <!-- <video src="images/vid-1.mp4" id="video-slider" loop autoplay muted></video> -->
